# VICE

./: .gdbinit  .gitignore  README.md
vice/: .autoconf.out  .automake.out  .cmake_bootstrap_makefile_hash  128.sh  CMakeLists.txt  DCSetup.sh  DCconfig.h  DCconfigure  Makefile  WiiSetup.sh  Wiiconfig.h  Wiiconfigure  aclocal.m4  config.cache  config.status  configure  configure.ac  configure~  dc.sh  dcx64sc.sh  dreamcast-toolchain.cmake  sh-elf-pkg-config  sh-elf-sdl-config  test.txt  vic.sh  xpet.sh  xplus4.sh
vice/autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
vice/cd/Vice/carts/: Jumpman Junior.crt
vice/cd/Vice/disks/: Jumpman (1983)(Epyx)[cr REM][t +3 REM].d64
vice/cd/Vice/snapshots/: brucelee.vsf
vice/cd/Vice/tapes/: Mega Vault (1984)(Imagine).tap
vice/cmake_build/: Makefile
vice/cmake_build/src/: Makefile
vice/cmake_build/src/arch/: Makefile
vice/cmake_build/src/c128/: Makefile
vice/cmake_build/src/c64/: Makefile
vice/cmake_build/src/c64dtv/: Makefile
vice/cmake_build/src/cbm2/: Makefile
vice/cmake_build/src/core/: Makefile
vice/cmake_build/src/crtc/: Makefile
vice/cmake_build/src/datasette/: Makefile
vice/cmake_build/src/diag/: Makefile
vice/cmake_build/src/diskimage/: Makefile
vice/cmake_build/src/drive/: Makefile
vice/cmake_build/src/fileio/: Makefile
vice/cmake_build/src/fsdevice/: Makefile
vice/cmake_build/src/gfxoutputdrv/: Makefile
vice/cmake_build/src/hvsc/: Makefile
vice/cmake_build/src/iecbus/: Makefile
vice/cmake_build/src/imagecontents/: Makefile
vice/cmake_build/src/joyport/: Makefile
vice/cmake_build/src/lib/: Makefile
vice/cmake_build/src/monitor/: Makefile
vice/cmake_build/src/parallel/: Makefile
vice/cmake_build/src/pet/: Makefile
vice/cmake_build/src/plus4/: Makefile
vice/cmake_build/src/printerdrv/: Makefile
vice/cmake_build/src/raster/: Makefile
vice/cmake_build/src/rs232drv/: Makefile
vice/cmake_build/src/samplerdrv/: Makefile
vice/cmake_build/src/scpu64/: Makefile
vice/cmake_build/src/serial/: Makefile
vice/cmake_build/src/sid/: Makefile
vice/cmake_build/src/tape/: Makefile
vice/cmake_build/src/tapeport/: Makefile
vice/cmake_build/src/tools/: Makefile
vice/cmake_build/src/userport/: Makefile
vice/cmake_build/src/vdc/: Makefile
vice/cmake_build/src/vdrive/: Makefile
vice/cmake_build/src/vic20/: Makefile
vice/cmake_build/src/vicii/: Makefile
vice/cmake_build/src/viciisc/: Makefile
vice/cmake_build/src/video/: Makefile
vice/data/: Makefile
vice/data/C128/: Makefile
vice/data/C64/: Makefile  Makefile.in
vice/data/C64DTV/: Makefile
vice/data/CBM-II/: Makefile
vice/data/DRIVES/: Makefile
vice/data/GLSL/: Makefile
vice/data/PET/: Makefile
vice/data/PLUS4/: Makefile
vice/data/PRINTER/: Makefile
vice/data/SCPU64/: Makefile
vice/data/VIC20/: Makefile
vice/data/common/: Makefile
vice/data/hotkeys/: Makefile
vice/doc/: Makefile  vice.texi
vice/doc/building/: Makefile
vice/doc/doxy/: index.html
vice/doc/html/: Makefile
vice/doc/readmes/: Makefile
vice/doc/vim/: Makefile
vice/doc/vim/ftdetect/: Makefile
vice/doc/vim/syntax/: Makefile  vhk.vim
vice/src/: CMakeLists.txt  Makefile  Makefile.in  c1541  cmdline.c  config.h  config.h.in  findpath.c  infocontrib.h  init.c  main.c  network.c  socket.c  sound.c  sound.h  sysfile.c  team.tmp  vsync.c
vice/src/.deps/: alarm.Po  attach.Po  autostart-prg.Po  autostart.Po  c1541-stubs.Po  c1541.Po  cbmdos.Po  cbmimage.Po  charset.Po  clipboard.Po  cmdline.Po  color.Po  crc32.Po  crt.Po  debug.Po  dma.Po  event.Po  findpath.Po  fliplist.Po  gcr.Po  info.Po  init.Po  initcmdline.Po  interrupt.Po  kbdbuf.Po  keyboard.Po  keymap.Po  lib.Po  log.Po  m3u.Po  machine-bus.Po  machine.Po  main.Po  network.Po  palette.Po  profiler.Po  ps2mouse.Po  ram.Po  rawfile.Po  resources.Po  (+13 more)
vice/src/arch/: Makefile
vice/src/buildtools/: Makefile
vice/src/c128/: CMakeLists.txt  Makefile  c128.c  c128mmu.c  c128mmu.h
vice/src/c64/: CMakeLists.txt  Makefile  c64.c  c64rom.c
vice/src/c64dtv/: CMakeLists.txt  Makefile  Makefile.in
vice/src/cbm2/: CMakeLists.txt  Makefile  cbm2.c  cbm5x0.c
vice/src/core/: CMakeLists.txt  Makefile  fmopl.c
vice/src/crtc/: CMakeLists.txt  Makefile
vice/src/datasette/: CMakeLists.txt  Makefile
vice/src/diag/: CMakeLists.txt  Makefile
vice/src/diskimage/: CMakeLists.txt  Makefile
vice/src/drive/: CMakeLists.txt  Makefile
vice/src/fileio/: CMakeLists.txt  Makefile
vice/src/fsdevice/: CMakeLists.txt  Makefile
vice/src/gfxoutputdrv/: CMakeLists.txt  Makefile
vice/src/hvsc/: CMakeLists.txt  Makefile
vice/src/iecbus/: CMakeLists.txt  Makefile
vice/src/imagecontents/: CMakeLists.txt  Makefile
vice/src/joyport/: CMakeLists.txt  Makefile  mouse.c  mouse.h
vice/src/lib/: Makefile
vice/src/monitor/: CMakeLists.txt  Makefile  mon_lex.c  mon_parse.c  monitor_binary.c  monitor_network.c
vice/src/parallel/: CMakeLists.txt  Makefile
vice/src/pet/: 6809.c  CMakeLists.txt  Makefile  pet.c
vice/src/plus4/: CMakeLists.txt  Makefile  plus4.c  plus4speech.c
vice/src/printerdrv/: CMakeLists.txt  Makefile
vice/src/raster/: CMakeLists.txt  Makefile  raster-snapshot.c
vice/src/resid/: .autoconf.out  configure  configure~
vice/src/resid-dtv/: configure
vice/src/rs232drv/: CMakeLists.txt  Makefile
vice/src/samplerdrv/: CMakeLists.txt  Makefile
vice/src/scpu64/: CMakeLists.txt  Makefile  Makefile.in  scpu64.c
vice/src/serial/: CMakeLists.txt  Makefile
vice/src/sid/: CMakeLists.txt  Makefile
vice/src/tape/: CMakeLists.txt  Makefile
vice/src/tapeport/: CMakeLists.txt  Makefile
vice/src/tools/: Makefile
vice/src/userport/: CMakeLists.txt  Makefile  Makefile.in
vice/src/vdc/: CMakeLists.txt  Makefile
vice/src/vdrive/: CMakeLists.txt  Makefile
vice/src/vic20/: CMakeLists.txt  Makefile  vic20.c
vice/src/vicii/: CMakeLists.txt  Makefile
vice/src/viciisc/: CMakeLists.txt  Makefile
vice/src/video/: CMakeLists.txt  Makefile  video-canvas.c  video-cmdline-options.c  video-resources.c
(+8325 files in other folders)
